# uvindex

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  cloudbuild.yaml  docker-compose.yaml
.github/: FUNDING.yml  dependabot.yml
docs/: kubernetes-setup.md
kubernetes/: deployment.yaml  secret_template.yaml  service.yaml
services/: .env  docker-compose.yaml
services/backend/: Cargo.toml  Dockerfile
services/backend/src/: geoip_service.rs  main.rs
services/backend/static/: index.html
services/cli/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
services/cli/src/: backend_service.rs  main.rs
src/: info.rs  main.rs  openweather_service.rs  weatherbit_service.rs
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/cicd/: main.tf  variables.tf
terraform/modules/functions/: main.tf  outputs.tf  variables.tf
terraform/modules/registry/: main.tf  variables.tf
