[package]
name = "uvindex"
version = "0.1.0"
authors = ["Dominic Roy-Stang <dominicroystang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.12"
prettytable-rs = "0.8.0"
term_size = "0.3.1"
textwrap = "0.11"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0.105", features = ["derive"] }
