[package]
name = "uvindex-backend"
version = "1.0.0"
authors = ["Dominic Roy-Stang <dominicroystang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.5" }
rocket-include-static-resources = { version = "0.9.3" }
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = { version = "1.0.111", features = ["derive"] }
