[package]
name = "uvindex-backend"
version = "1.0.0"
authors = ["Dominic Roy-Stang <dominicroystang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.7" }
rocket-include-static-resources = { version = "0.9.5" }
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
serde = { version = "1.0.123", features = ["derive"] }
