[package]
name = "uvindex-cli"
version = "1.0.0"
authors = ["Dominic Roy-Stang <dominicroystang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
prettytable-rs = "0.8.0"
term_size = "0.3.2"
textwrap = "0.13"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde = { version = "1.0.126", features = ["derive"] }
